@@ -7,6 +7,8 @@ Changelog
 
 - Add Python implementation for calculating disk usage. [buchi]
 
+- Add option to specify data path for disk usage calculation. [buchi]
+
 
 1.3.0 (2023-04-04)
 ------------------
